Ignore/IaC/002_VPC_Peering.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create a VPC peering connection between two VPCs

Parameters:
  RequesterVPCId:
    Type: String
    Description: The ID of the requester VPC - OnPrem
    Default: 'vpc-074bbd2273c1a7940'
  RequesterCIDR:
    Type: String
    Description: The CIDR block of the requester VPC
    Default: '172.16.0.0/22'

  AccepterVPCId:
    Type: String
    Description: The ID of the accepter VPC - AWS
    Default: 'vpc-04fa976807cd22c3e'
  AccepterCIDR:
    Type: String
    Description: The CIDR block of the accepter VPC
    Default: '10.16.0.0/16'



  SourceAwsPrivateRT:
    Description: awsPrivateRouteTable
    Type: String
    Default: 'rtb-0489e85dc4d7bfc1a'  
  SourceAwsPublicRT:
    Description: awsPublicRouteTable
    Type: String
    Default: 'rtb-05fe61a8647e30cd8'

  TargetawsPrivateRT:
    Description: awsPrivateRouteTable
    Type: String
    Default: 'rtb-0d54d2657dab9ccfb'  
  TargetawsPublicRT:
    Description: awsPublicRouteTable
    Type: String
    Default: 'rtb-0c33a3470bea3af49'


Resources:
  VPCPeeringConnection:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      VpcId: !Ref RequesterVPCId
      PeerVpcId: !Ref AccepterVPCId
      PeerRegion: !Ref AWS::Region
      PeerOwnerId: !Ref AWS::AccountId
      Tags:
        - Key: ENV
          Value: DEV
        - Key: Name
          Value: 'A4L-ON-PREMISES-TO-AWS'

  # /-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/
  
  AWSDBPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AccepterVPCId 
      Tags:
        - Key: Name
          Value: 'A4L-ON-PREMISES-TO-AWS'

  SourcePrivateRTToTarget:
      Type: "AWS::EC2::Route"
      Properties:
        RouteTableId: !Ref SourceAwsPrivateRT
        DestinationCidrBlock: '10.16.0.0/16'
        VpcPeeringConnectionId: !Ref VPCPeeringConnection

  SourcePublicRTToTarget:
      Type: "AWS::EC2::Route"
      Properties:
        RouteTableId: !Ref SourceAwsPublicRT
        DestinationCidrBlock: '10.16.0.0/16'
        VpcPeeringConnectionId: !Ref VPCPeeringConnection

# 

  TargetPrivateRTToTarget:
      Type: "AWS::EC2::Route"
      Properties:
        RouteTableId: !Ref TargetawsPrivateRT
        DestinationCidrBlock: '172.16.0.0/22'
        VpcPeeringConnectionId: !Ref VPCPeeringConnection

  TargetPublicRTToTarget:
      Type: "AWS::EC2::Route"
      Properties:
        RouteTableId: !Ref TargetawsPublicRT
        DestinationCidrBlock: '172.16.0.0/22'
        VpcPeeringConnectionId: !Ref VPCPeeringConnection
